<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/bookList_menuSort"
        android:icon="@drawable/ic_action_sort_by_size"
        android:showAsAction="ifRoom"
        android:title="@string/menu_sort">
        <menu>
            <item
                android:id="@+id/bookList_actionSortByFirstLetter"
                android:icon="@drawable/ic_action_brightness_auto"
                android:title="@string/action_sort_by_first_letter"/>
            <item
                android:id="@+id/bookList_actionSortByToReadRead"
                android:icon="@drawable/ic_action_sort_by_to_read_read"
                android:title="@string/action_sort_by_to_read_read"/>
            <item
                android:id="@+id/bookList_actionSortByLoaned"
                android:icon="@drawable/ic_action_sort_by_loaned"
                android:title="@string/action_sort_by_loaned"/>
            <item
                android:id="@+id/bookList_actionSortByAuthor"
                android:icon="@drawable/ic_action_sort_by_author"
                android:title="@string/action_sort_by_author"/>
            <item
                android:id="@+id/bookList_actionSortByCategory"
                android:icon="@drawable/ic_action_labels"
                android:title="@string/action_sort_by_category"/>
            <item
                android:id="@+id/bookList_actionSortBySeries"
                android:icon="@drawable/ic_action_sort_by_series"
                android:title="@string/action_sort_by_series"/>
            <item
                android:id="@+id/bookList_actionSortByBookLocation"
                android:icon="@drawable/ic_action_bookshelf"
                android:title="@string/action_sort_by_book_location"/>
            <item
                android:id="@+id/bookList_actionSortByLanguage"
                android:icon="@drawable/ic_action_map"
                android:title="@string/action_sort_by_language"/>
            <item
                android:id="@+id/bookList_actionSortByFavourite"
                android:icon="@drawable/ic_action_sort_by_favourite"
                android:title="@string/action_sort_by_favourite"/>
        </menu>
    </item>
    <item
        android:id="@+id/bookList_actionSearch"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/ic_action_search_books"
        android:showAsAction="ifRoom|collapseActionView"
        android:title="@string/menu_search">
    </item>

</menu>