<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bookEditGeneral_scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <ImageView
            android:id="@+id/bookEditGeneral_buttonThumbnail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/image_thumbnail"
            android:src="@drawable/ic_undefined_thumbnail" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_title" />

        <EditText
            android:id="@+id/bookEditGeneral_textTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_title"
            android:inputType="textCapSentences" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_subtitle" />

        <EditText
            android:id="@+id/bookEditGeneral_textSubtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_subtitle"
            android:inputType="textCapSentences" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_authors" />

        <Button
            android:id="@+id/bookEditGeneral_buttonEditAuthors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/button_edit_authors" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_categories" />

        <Button
            android:id="@+id/bookEditGeneral_buttonEditCategories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/button_edit_categories" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_series" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <AutoCompleteTextView
                android:id="@+id/bookEditGeneral_textSeries"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="@string/label_series"
                android:imeOptions="actionNext"
                android:inputType="textCapSentences"
                android:singleLine="true" />

            <EditText
                android:id="@+id/bookEditGeneral_textNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:hint="@string/label_series_number"
                android:inputType="number" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_publisher" />

        <AutoCompleteTextView
            android:id="@+id/bookEditGeneral_textPublisher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_publisher"
            android:inputType="textCapWords" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_published_date" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/bookEditGeneral_textPublishedDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/label_published_date_hint"
                android:inputType="date" />

            <ImageButton
                android:id="@+id/bookEditGeneral_buttonPickPublishedDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/label_pick_published_date"
                android:src="@drawable/ic_action_pick_date" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_page_count" />

        <EditText
            android:id="@+id/bookEditGeneral_textPageCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_page_count"
            android:inputType="number" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_language" />

        <Spinner
            android:id="@+id/bookEditGeneral_spinnerLanguage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_description" />

        <EditText
            android:id="@+id/bookEditGeneral_textDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_description"
            android:inputType="textCapSentences|textMultiLine" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_isbn10" />

        <EditText
            android:id="@+id/bookEditGeneral_textIsbn10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_isbn10"
            android:inputType="text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_isbn13" />

        <EditText
            android:id="@+id/bookEditGeneral_textIsbn13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_isbn13"
            android:inputType="number" />
    </LinearLayout>

</ScrollView>